[tool.poetry]
name = "tconcurrent"
version = "0.0.0"
description = "C++ async framework"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = ">= 2020.12.3123"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
