[tool.poetry]
name = "tconcurrent"
version = "0.0.0"
description = "C++ async framework"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.8"

tankerci = { version = ">= 2022.6.4317", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
