[tool.poetry]
name = "tconcurrent"
version = "0.0.0"
description = "C++ async framework"
authors = ["Tanker team <tech@tanker.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

tankerci = { version = "== 2024.4.5172", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
